test/TestSuite/Syntax/Errors/macro_stack_overflow.tjp
project "Macro Stack Overflow" 2009-11-01 +2m

macro foo [ task "bar" { ${foo} } ]

# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: info 3 macro_stack
# MARK: error 28 macro_stack_overflow
${foo}

